--- a/backend/.env
+++ b/backend/.env
@@ -20,8 +20,8 @@ MAX_FILE_SIZE=10485760
 # Email Configuration (optional - for notifications)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+SMTP_USER=dentanet.official@gmail.com
+SMTP_PASS=zzrb xqzt bhkt dxgo
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:8080
